Fixed title to match name. fixed alignment.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -11,7 +11,7 @@ ul {
 }
 
 #header {
-    width: 350px;
+    width: 273px;
     margin: 0 auto;
 }
 
